# cppitems

./: .clang-tidy  .gitignore  history.txt
items/000/: item.md
items/001/: item.md
items/001/01/: grid.c  grid.h  main.c
items/001/add/: add.c
items/001/cgrid/: grid.c  grid.h  main.c
items/001/ex0/: CMakeLists.txt  main.cpp  vector.cpp
items/001/grid/: CMakeLists.txt  grid.cpp  grid.h  main.cpp  main_asan.cpp  main_msan.cpp  main_tsan.cpp
items/001/loop/: loop.cpp
items/002/: item.md  vector_A.hpp  vector_B.hpp  vector_C.hpp
items/002/ex0/: CMakeLists.txt  main.cpp  vector.cpp  vector.h
items/003/: CMakeLists.txt  Makefile  debug_type.cpp  expressions.cpp  expressions_user.cpp  item.md  minimal.cpp  more_types.cpp
items/003/grid/: CMakeLists.txt  grid.h  main.cpp
items/003/grid2/: grid.h  main.cpp
items/003/include/: square.hpp
items/003/lib/: square.cpp
items/004/: item.md
items/004/grid2/: grid.h  main.cpp
items/005/: 01_fundamental_types.cpp  03_debug_type.cpp  05_expressions_user.cpp  CMakeLists.txt  benchmark_constructors.cpp  benchmark_initializers.cpp  item.md
items/006/: item.md  item_edit.md  q.cpp  smf.cpp  widgetowns.cpp
items/007/: CMakeLists.txt  benchmark_constructors.cpp  item.md  vector.hpp
items/008/: CMakeLists.txt  benchmark_list.cpp  item  item.md  item.md.bak  item_edit.md  list.hpp  widgetowns.cpp
items/009/: capture.cpp  compare.cpp  conversion2.cpp  dangling.cpp  inlineclass.cpp  item.md  noncapture.cpp
items/010/: auto.cpp  deduction_clref.cpp  deduction_lref.cpp  deduction_val.cpp  failure1.cpp  failure2.cpp  item.md  specialize.cpp  swap.cpp
items/011/: CMakeLists.txt  add.cpp  algorithms.h  auto.cpp  deduction_clref.cpp  deduction_fref.cpp  deduction_val.cpp  failure1.cpp  failure2.cpp  item.md  item_edit.md  specialize.cpp  swap.cpp  test_algorithms.cpp  tppack.cpp  vector_iterators.cpp
items/012/: CMakeLists.txt  Distribution.hpp  SpaceVector.hpp  deduce_bycrefs.cpp  deduce_bylref.cpp  deduce_byrref.cpp  deduce_byval.cpp  deduce_guide0.cpp  is_same.cpp  item.md  item_edit.md  nttp.cpp  pair.cpp  pair2.cpp  test_distribution.cpp  tttp.cpp
items/013/: CMakeLists.txt  item.md  test_timer.cpp  timer.h
items/014/: deduce_bycrefs.cpp  deduce_bylref.cpp  deduce_byrref.cpp  deduce_byval.cpp  deduction_guide1.cpp  deduction_guide2.cpp  item.md  item_edit.md  pair.cpp  pair2.cpp  pair_special.cpp  tttp.cpp  widget.cpp  widgetarray.cpp
items/015/: item.md  widget_empty.cpp  widgetarray.cpp
items/016/: item.md  sp_impl.cpp  up_impl.cpp
items/017/: .gitignore  CMakeLists.txt  capture.cpp  conversion1.cpp  count_if.cpp  fibonacci_iterator.cpp  generic.cpp  inlineclass.cpp  item.md  item_edit.md  list.hpp  runTests.sh
items/017/IteratorTests/: CMakeLists.txt
items/017/IteratorTests/TestA_dereference/: CMakeLists.txt  TestA_dereference.cpp
items/017/IteratorTests/TestB_increment/: CMakeLists.txt  TestB_increment.cpp
items/017/IteratorTests/TestC_decrement/: CMakeLists.txt  TestC_decrement.cpp
items/017/IteratorTests/TestD_decrement_end/: CMakeLists.txt  TestD_decrement_end.cpp
items/017/IteratorTests/TestE_arrow_operator/: CMakeLists.txt  TestE_arrow_operator.cpp
items/017/IteratorTests/TestF_explicit_loop/: CMakeLists.txt  TestF_explicit_loop.cpp
items/017/IteratorTests/TestG_range_based_loop/: CMakeLists.txt  TestG_range_based_loop.cpp
items/017/IteratorTests/TestH_constness_check/: CMakeLists.txt  TestH_constness_check.cpp
items/017/IteratorTests/TestI_STL_compatibility/: CMakeLists.txt  TestI_STL_compatibility.cpp
items/018/: CMakeLists.txt  Widget.h  fileio.cpp  item.md  item_edit.md  runSmartPtrTests.sh  sp_impl.cpp  sptr_use.cpp  unique_ptr.hpp
items/018/SmartPtrTests/: CMakeLists.txt  unique_ptr_solution.h
items/018/SmartPtrTests/TestA_construction/: CMakeLists.txt  test.cpp
items/018/SmartPtrTests/TestB_assignment/: test.cpp
items/018/SmartPtrTests/TestC_release_reset/: test.cpp
items/018/SmartPtrTests/TestD_compare/: test.cpp
items/018/SmartPtrTests/TestE_deleter/: CMakeLists.txt  test.cpp
items/018/SmartPtrTests/TestF_deleter_file/: test.cpp
items/019/: abstract.cpp  access.cpp  ctor_delete.cpp  ctor_inherit.cpp  downcasting.cpp  dtor.cpp  item.md  layout.cpp  upcasting_leak.cpp  vec_unique.cpp
items/020/: CMakeLists.txt  access.cpp  ctor_delete.cpp  ctor_inherit.cpp  dtor.cpp  generators.hpp  item.md  item_edit.md  layout.cpp  polymorphism.cpp  upcasting_flat.cpp  upcasting_leak.cpp
items/020/librandompi/: CMakeLists.txt  RandomPi_headeronly.hpp  RandomPi_library.cpp  RandomPi_library.hpp
items/021/: async.cpp  convar.cpp  futures.cpp  item.md  item.md.bak  mutex.cpp  mutex_lock.cpp  serial_atomic_vs_lock.cpp  thread_pool.cpp
items/022/: convar.cpp  item.md  item.md.bak  item_edit.md  mutex_lock.cpp  thread.cpp
items/022/install/include/: widget.hpp
items/022/install/lib/cmake/: WidgetConfig.cmake  WidgetTargets-debug.cmake  WidgetTargets.cmake
items/022/widget/include/: template.hpp
items/022/widget/test/: main.cpp
items/023/: item.md
items/024/: item.md  item_edit.md
items/024/usingwidget/: CMakeLists.txt
items/024/widget/: CMakeLists.txt
items/024/widget/include/: widget.cpp
items/025/: item.md  item_edit.md
items/025/usingwidget/: main.cpp
